# wArm_ros

./: README.md
warm_arduino/: CMakeLists.txt  package.xml  warm_arduino.ino
warm_arduino/msg/: ArmJointState.msg
warm_arduino/scripts/: JointAngle2Steps.cpp
warm_description/: CMakeLists.txt  package.xml
warm_description/config/: joint_names_bip_prova.yaml
warm_description/launch/: display.launch  display_marker.launch
warm_description/meshes/: arm_link.STL  base_link.STL  bip_low_link.STL  bip_up_link.STL  ee_link.STL  forearm_link.STL  rod_link.STL  shoulder_link.STL  triangle_link.STL  upper_fake_link.STL  wheel_joint3_link.STL
warm_description/rviz/: display_marker.rviz  urdf.rviz
warm_description/src/: joint_publisher.cpp
warm_description/urdf/: warm_model.gv  warm_model.urdf
warm_gcode/: CMakeLists.txt  package.xml
warm_gcode/scripts/: cuore_0002.ngc  gcode_interpreter.py  meccanica_0001.ngc  meccanica_big_0001.ngc  warm_0001.ngc  warm_small_0001.ngc
