<?xml version="1.0"?>
<package>
  <name>warm_arduino</name>
  <version>1.0.0</version>
  <description>Arduino files</description>
  <license>BSD</license>

  <author email="danilomast@gmail.com">Danilo Mastroianni</author>
  <maintainer email="danilomast@gmail.com">Danilo Mastroianni</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
