<package>
  <name>warm_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for wArm</p>
    <p>This package contains configuration data, 3D models and launch files for wArm robot</p>
  </description>
  <author>Danilo Mastroianni</author>
  <maintainer email="danilomast@gmail.com" />
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>tf</run_depend>
</package>
